@@ -3,9 +3,11 @@
 
  * slapformat: Fix issue of bridge not connected with real interface on
    Linux >= 2.6.39 [Arnaud Fontaine]
- * slapconsole: Simplify usage and use configuration file. You can now 
+ * slapconsole: Simplify usage and use configuration file. You can now
 just run slapconsole and type things like "request(kvm, 'mykvm')".
 [Cedric de Saint Martin]
+ * slapformat: Allow to have IPv6 only interface, with bridge still supporting
+   local IPv4 stack. [Łukasz Nowak]
 
 0.8 (2011-06-27)
 ================
